--- a/demo/css/main.css
+++ b/demo/css/main.css
@@ -153,7 +153,7 @@ pre.has-example {
 
 
 /* positons */
-.position_tooltip {
+.position_tooltip,.show {
     margin: 0.5em;
     background: #ddddff;
     padding: 10px;
@@ -161,6 +161,13 @@ pre.has-example {
     float:left;
     width: 100px;
     text-align: center;
+}
+.show {
+    width: auto;
+}
+.trace {
+    width: 200px;
+    height: 100px;
 }
 .positon_wrap {
     overflow: hidden;
