--- a/demo/css/tooltip.css
+++ b/demo/css/tooltip.css
@@ -1,5 +1,5 @@
 .sea.tooltip-container {
-  max-width: 500px;
+  max-width: 250px;
   opacity: 0.5;
 }
 
@@ -79,4 +79,102 @@
 
 .pointer-events-none {
   pointer-events: none;
+}
+
+.skin-dream {
+  position: relative;
+  display: inline-block;
+}
+
+.skin-dream .tooltip-arrow {
+  position: absolute;
+  top: -8px;
+  left: 88px;
+  z-index: -1;
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background-color: #434240;
+  -webkit-transform: rotate(45deg);
+     -moz-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+       -o-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+.skin-dream .tooltip-content {
+  display: inline-block;
+  max-width: 199px;
+  padding: 10px;
+  font-size: 15px;
+  color: #fff;
+  -webkit-text-shadow: 1px -1px 1px #777777;
+     -moz-text-shadow: 1px -1px 1px #777777;
+          text-shadow: 1px -1px 1px #777777;
+  background-color: #434240;
+  -webkit-border-radius: 3px;
+     -moz-border-radius: 3px;
+          border-radius: 3px;
+}
+
+.skin-dream.tooltip-n {
+  padding-bottom: 10px;
+}
+
+.skin-dream.tooltip-n .tooltip-arrow {
+  border-top: 10px solid #4C4C4C;
+}
+
+.skin-dream.tooltip-s {
+  padding-top: 10px;
+}
+
+.skin-dream.tooltip-s .tooltip-arrow {
+  border-bottom: 10px solid #000;
+}
+
+.skin-dream.tooltip-w {
+  padding-left: 10px;
+}
+
+.skin-dream.tooltip-w .tooltip-arrow {
+  border-right: 10px solid #000;
+}
+
+.skin-dream.tooltip-e {
+  padding-right: 10px;
+}
+
+.skin-dream.tooltip-e .tooltip-arrow {
+  border-left: 10px solid #000;
+}
+
+.skin-dream.tooltip-ne {
+  padding-bottom: 10px;
+}
+
+.skin-dream.tooltip-nw {
+  padding-bottom: 10px;
+}
+
+.skin-dream.tooltip-nw .tooltip-arrow {
+  right: 0;
+  bottom: -10px;
+  border-top: 10px solid #000;
+}
+
+.skin-dream.tooltip-se {
+  padding-top: 10px;
+}
+
+.skin-dream.tooltip-se .tooltip-arrow {
+  border-bottom: 10px solid #000;
+}
+
+.skin-dream.tooltip-sw {
+  padding-top: 10px;
+}
+
+.skin-dream.tooltip-sw .tooltip-arrow {
+  border-bottom: 10px solid #000;
 }
