--- a/less/skin-pure.less
+++ b/less/skin-pure.less
@@ -32,106 +32,5 @@
 	-webkit-box-shadow: @Horizontal @Vertical @Blur @Spread @color;
 }
 
-//skin-dream
+//skin-pure
 //====================================================
-.skin-dream {
-	position: relative;
-	display: inline-block;
-	.tooltip-arrow {
-		position: absolute;
-		display: inline-block;
-
-		width: 20px;
-		height: 20px;
-		z-index: -1;
-		background-color: #434240;
-		.rotate (45deg);
-	}
-	.tooltip-content {
-		display: inline-block;
-		max-width: 199px;
-		padding: 10px;
-		font-size: 15px;
-		color: #fff;
-		.text-shadow (1px, -1px, 1px, #777);
-		background-color: #434240;
-		.border-radius (3px);
-	}
-}
-
-.skin-dream.tooltip-n {
-    padding-bottom: 10px;
-
-    .tooltip-arrow {
-
-        left: 50%;
-        bottom: 6px;
-        margin-left: -10px;
-    }
-}
-.skin-dream.tooltip-s {
-    padding-top: 10px;
-
-    .tooltip-arrow {
-
-        left: 50%;
-        top: 6px;
-        margin-left: -10px;
-    }
-}
-.skin-dream.tooltip-w {
-    padding-right: 10px;
-
-    .tooltip-arrow {
-
-    	top: 50%;
-    	right: 6px;
-    	margin-top: -10px;
-    }
-}
-.skin-dream.tooltip-e {
-    padding-left: 10px;
-
-    .tooltip-arrow {
-
-    	top: 50%;
-    	left: 6px;
-    	margin-top: -10px;
-    }
-}
-.skin-dream.tooltip-ne {
-    padding-bottom: 10px;
-
-    .tooltip-arrow {
-    	bottom: 6px;
-    	left: 9px;
-
-    }
-
-}
-.skin-dream.tooltip-nw {
-    padding-bottom: 10px;
-
-    .tooltip-arrow {
-        bottom: 6px;
-    	right: 9px;
-    }
-}
-.skin-dream.tooltip-se {
-    padding-top: 10px;
-
-    .tooltip-arrow {
-        left: 9px;
-        top: 6px;
-    }
-}
-.skin-dream.tooltip-sw {
-    padding-top: 10px;
-
-    .tooltip-arrow {
-        right: 9px;
-        top: 6px;
-    }
-}
-
-
