--- a/less/asTooltip-sea.less
+++ b/less/asTooltip-sea.less
@@ -1,10 +1,10 @@
-.sea.tooltip-container {
+.asTooltip_sea.asTooltip-container {
 
     opacity: 0.5;
 
     max-width: 250px;
 
-    .tooltip-content {
+    .asTooltip-content {
         background-color: #4C4C4C;
         padding: 10px;
 
@@ -14,78 +14,78 @@
     
     }
 
-    .tooltip-close {
+    .asTooltip-close {
 
     }
 
-    .tooltip-arrow {
+    .asTooltip-arrow {
         position: absolute;
         width: 0px;
         height: 0px;
 
     }
 
-    .tooltip-loading {
+    .asTooltip-loading {
         display: block;
 
         width: 16px;
         height: 16px;
-        background: url(../img/tooltip-loading.gif) no-repeat scroll 0 0 transparent;
+        background: url(../img/asTooltip-loading.gif) no-repeat scroll 0 0 transparent;
     }
 
 
 
 }
 
-.sea.tooltip-n {
+.asTooltip_sea.asTooltip-n {
     padding-bottom: 10px;
 
-    .tooltip-arrow {
+    .asTooltip-arrow {
         border-top: 10px solid #4C4C4C;
     }
 }
-.sea.tooltip-s {
+.asTooltip_sea.asTooltip-s {
     padding-top: 10px;
 
-    .tooltip-arrow {
+    .asTooltip-arrow {
         border-bottom: 10px solid #000;
     }
 }
-.sea.tooltip-w {
+.asTooltip_sea.asTooltip-w {
     padding-left: 10px;
 
-    .tooltip-arrow {
+    .asTooltip-arrow {
         border-right: 10px solid #000;
     }
 }
-.sea.tooltip-e {
+.asTooltip_sea.asTooltip-e {
     padding-right: 10px;
 
-    .tooltip-arrow {
+    .asTooltip-arrow {
         border-left: 10px solid #000;
     }
 }
-.sea.tooltip-ne {
+.asTooltip_sea.asTooltip-ne {
     padding-bottom: 10px;
 
-    .tooltip-arrow {
+    .asTooltip-arrow {
 
     }
 
 }
-.sea.tooltip-nw {
+.asTooltip_sea.asTooltip-nw {
     padding-bottom: 10px;
 
-    .tooltip-arrow {
+    .asTooltip-arrow {
         border-top: 10px solid #000;
         right: 0;
         bottom:  -10px;
     }
 }
-.sea.tooltip-se {
+.asTooltip_sea.asTooltip-se {
     padding-top: 10px;
 }
-.sea.tooltip-sw {
+.asTooltip_sea.asTooltip-sw {
     padding-top: 10px;
 }
 
