--- a/demo/css/asTooltip.css
+++ b/demo/css/asTooltip.css
@@ -1,92 +1,88 @@
-.sea.tooltip-container {
+.asTooltip_sea.asTooltip-container {
   max-width: 250px;
   opacity: 0.5;
 }
 
-.sea.tooltip-container .tooltip-content {
+.asTooltip_sea.asTooltip-container .asTooltip-content {
   padding: 10px;
   color: #fff;
   background-color: #4C4C4C;
   border-radius: 5px;
 }
 
-.sea.tooltip-container .tooltip-arrow {
+.asTooltip_sea.asTooltip-container .asTooltip-arrow {
   position: absolute;
   width: 0;
   height: 0;
 }
 
-.sea.tooltip-container .tooltip-loading {
+.asTooltip_sea.asTooltip-container .asTooltip-loading {
   display: block;
   width: 16px;
   height: 16px;
-  background: url(../img/tooltip-loading.gif) no-repeat scroll 0 0 transparent;
+  background: url(../img/asTooltip-loading.gif) no-repeat scroll 0 0 transparent;
 }
 
-.sea.tooltip-n {
+.asTooltip_sea.asTooltip-n {
   padding-bottom: 10px;
 }
 
-.sea.tooltip-n .tooltip-arrow {
+.asTooltip_sea.asTooltip-n .asTooltip-arrow {
   border-top: 10px solid #4C4C4C;
 }
 
-.sea.tooltip-s {
+.asTooltip_sea.asTooltip-s {
   padding-top: 10px;
 }
 
-.sea.tooltip-s .tooltip-arrow {
+.asTooltip_sea.asTooltip-s .asTooltip-arrow {
   border-bottom: 10px solid #000;
 }
 
-.sea.tooltip-w {
+.asTooltip_sea.asTooltip-w {
   padding-left: 10px;
 }
 
-.sea.tooltip-w .tooltip-arrow {
+.asTooltip_sea.asTooltip-w .asTooltip-arrow {
   border-right: 10px solid #000;
 }
 
-.sea.tooltip-e {
+.asTooltip_sea.asTooltip-e {
   padding-right: 10px;
 }
 
-.sea.tooltip-e .tooltip-arrow {
+.asTooltip_sea.asTooltip-e .asTooltip-arrow {
   border-left: 10px solid #000;
 }
 
-.sea.tooltip-ne {
+.asTooltip_sea.asTooltip-ne {
   padding-bottom: 10px;
 }
 
-.sea.tooltip-nw {
+.asTooltip_sea.asTooltip-nw {
   padding-bottom: 10px;
 }
 
-.sea.tooltip-nw .tooltip-arrow {
+.asTooltip_sea.asTooltip-nw .asTooltip-arrow {
   right: 0;
   bottom: -10px;
   border-top: 10px solid #000;
 }
 
-.sea.tooltip-se {
+.asTooltip_sea.asTooltip-se {
   padding-top: 10px;
 }
 
-.sea.tooltip-sw {
+.asTooltip_sea.asTooltip-sw {
   padding-top: 10px;
 }
 
-.pointer-events-none {
-  pointer-events: none;
-}
-
-.tooltip_skin-dream {
+.asTooltip_skin-dream {
   position: relative;
   display: inline-block;
 }
 
-.tooltip_skin-dream .tooltip-arrow {
+.asTooltip_skin-dream .asTooltip-arrow {
   position: absolute;
   z-index: -1;
   display: inline-block;
@@ -100,7 +96,7 @@
           transform: rotate(45deg);
 }
 
-.tooltip_skin-dream .tooltip-content {
+.asTooltip_skin-dream .asTooltip-content {
   display: inline-block;
   max-width: 199px;
   padding: 10px;
@@ -115,46 +111,46 @@
           border-radius: 3px;
 }
 
-.tooltip_skin-dream.tooltip-n .tooltip-arrow {
+.asTooltip_skin-dream.asTooltip-n .asTooltip-arrow {
   bottom: -4px;
   left: 50%;
   margin-left: -10px;
 }
 
-.tooltip_skin-dream.tooltip-s .tooltip-arrow {
+.asTooltip_skin-dream.asTooltip-s .asTooltip-arrow {
   top: -4px;
   left: 50%;
   margin-left: -10px;
 }
 
-.tooltip_skin-dream.tooltip-w .tooltip-arrow {
+.asTooltip_skin-dream.asTooltip-w .asTooltip-arrow {
   top: 50%;
   right: -4px;
   margin-top: -10px;
 }
 
-.tooltip_skin-dream.tooltip-e .tooltip-arrow {
+.asTooltip_skin-dream.asTooltip-e .asTooltip-arrow {
   top: 50%;
   left: -4px;
   margin-top: -10px;
 }
 
-.tooltip_skin-dream.tooltip-ne .tooltip-arrow {
+.asTooltip_skin-dream.asTooltip-ne .asTooltip-arrow {
   bottom: -4px;
   left: 9px;
 }
 
-.tooltip_skin-dream.tooltip-nw .tooltip-arrow {
+.asTooltip_skin-dream.asTooltip-nw .asTooltip-arrow {
   right: 9px;
   bottom: -4px;
 }
 
-.tooltip_skin-dream.tooltip-se .tooltip-arrow {
+.asTooltip_skin-dream.asTooltip-se .asTooltip-arrow {
   top: -4px;
   left: 9px;
 }
 
-.tooltip_skin-dream.tooltip-sw .tooltip-arrow {
+.asTooltip_skin-dream.asTooltip-sw .asTooltip-arrow {
   top: -4px;
   right: 9px;
 }
