--- a/less/asTooltip-dream.less
+++ b/less/asTooltip-dream.less
@@ -32,12 +32,12 @@
 	-webkit-box-shadow: @Horizontal @Vertical @Blur @Spread @color;
 }
 
-//tooltip_skin-dream
+//asTooltip_skin-dream
 //====================================================
-.tooltip_skin-dream {
+.asTooltip_skin-dream {
 	position: relative;
 	display: inline-block;
-	.tooltip-arrow {
+	.asTooltip-arrow {
 		position: absolute;
 		display: inline-block;
 
@@ -47,7 +47,7 @@
 		background-color: #434240;
 		.rotate (45deg);
 	}
-	.tooltip-content {
+	.asTooltip-content {
 		display: inline-block;
 		max-width: 199px;
 		padding: 10px;
@@ -59,73 +59,73 @@
 	}
 }
 
-.tooltip_skin-dream.tooltip-n {
+.asTooltip_skin-dream.asTooltip-n {
     //padding-bottom: 10px;
-    .tooltip-arrow {
+    .asTooltip-arrow {
 
         left: 50%;
         bottom: -4px;
         margin-left: -10px;
     }
 }
-.tooltip_skin-dream.tooltip-s {
+.asTooltip_skin-dream.asTooltip-s {
     //padding-top: 10px;
-    .tooltip-arrow {
+    .asTooltip-arrow {
 
         left: 50%;
         top: -4px;
         margin-left: -10px;
     }
 }
-.tooltip_skin-dream.tooltip-w {
+.asTooltip_skin-dream.asTooltip-w {
     //padding-right: 10px;
-    .tooltip-arrow {
+    .asTooltip-arrow {
 
     	top: 50%;
     	right: -4px;
     	margin-top: -10px;
     }
 }
-.tooltip_skin-dream.tooltip-e {
+.asTooltip_skin-dream.asTooltip-e {
     //padding-left: 10px;
 
-    .tooltip-arrow {
+    .asTooltip-arrow {
 
     	top: 50%;
     	left: -4px;
     	margin-top: -10px;
     }
 }
-.tooltip_skin-dream.tooltip-ne {
+.asTooltip_skin-dream.asTooltip-ne {
     //padding-bottom: 10px;
 
-    .tooltip-arrow {
+    .asTooltip-arrow {
     	bottom: -4px;
     	left: 9px;
 
     }
 
 }
-.tooltip_skin-dream.tooltip-nw {
+.asTooltip_skin-dream.asTooltip-nw {
     //padding-bottom: 10px;
 
-    .tooltip-arrow {
+    .asTooltip-arrow {
         bottom: -4px;
     	right: 9px;
     }
 }
-.tooltip_skin-dream.tooltip-se {
+.asTooltip_skin-dream.asTooltip-se {
     //padding-top: 10px;
 
-    .tooltip-arrow {
+    .asTooltip-arrow {
         left: 9px;
         top: -4px;
     }
 }
-.tooltip_skin-dream.tooltip-sw {
+.asTooltip_skin-dream.asTooltip-sw {
     //padding-top: 10px;
 
-    .tooltip-arrow {
+    .asTooltip-arrow {
         right: 9px;
         top: -4px;
     }
