--- a/css/tooltip.dream.css
+++ b/css/tooltip.dream.css
@@ -1,58 +1,76 @@
-.asTooltip_dream .asTooltip-arrow {
-  position: absolute;
-  display: inline-block;
-  width: 15px;
-  height: 15px;
-  z-index: -1;
-  background-color: #434240;
-  -webkit-transform: rotate(45deg);
-      -ms-transform: rotate(45deg);
-       -o-transform: rotate(45deg);
-          transform: rotate(45deg);
-}
-.asTooltip_dream .asTooltip-content {
-  display: inline-block;
-  max-width: 200px;
-  padding: 6px 8px;
-  font-size: 13px;
+.asTooltip_dream .asTooltip-inner {
+  padding: 0.2em 0.6em;
+  font-size: 1.1em;
+  line-height: 1.5em;
   color: #fff;
-  text-shadow: 1px, -1px, 1px, #777777;
   background-color: #434240;
   border-radius: 3px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
-.asTooltip_dream.asTooltip-n .asTooltip-arrow {
-  left: 50%;
-  bottom: -4px;
-  margin-left: -10px;
+.asTooltip_dream .asTooltip-inner:before {
+  content: '';
+  display: block;
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-width: 6px;
+  border-style: solid;
+  border-color: transparent;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
-.asTooltip_dream.asTooltip-s .asTooltip-arrow {
-  left: 50%;
-  top: -4px;
-  margin-left: -10px;
+.asTooltip_dream .asTooltip-loading:before,
+.asTooltip_dream .asTooltip-loading:after {
+  background-color: white;
 }
-.asTooltip_dream.asTooltip-w .asTooltip-arrow {
+.asTooltip_dream.asTooltip-element-top .asTooltip-inner {
+  margin-bottom: 6px;
+}
+.asTooltip_dream.asTooltip-element-top .asTooltip-inner:before {
+  top: 100%;
+  border-top-color: #434240;
+}
+.asTooltip_dream.asTooltip-element-left .asTooltip-inner {
+  margin-right: 6px;
+}
+.asTooltip_dream.asTooltip-element-left .asTooltip-inner:before {
+  left: 100%;
+  border-left-color: #434240;
+}
+.asTooltip_dream.asTooltip-element-right .asTooltip-inner {
+  margin-left: 6px;
+}
+.asTooltip_dream.asTooltip-element-right .asTooltip-inner:before {
+  right: 100%;
+  border-right-color: #434240;
+}
+.asTooltip_dream.asTooltip-element-bottom .asTooltip-inner {
+  margin-top: 6px;
+}
+.asTooltip_dream.asTooltip-element-bottom .asTooltip-inner:before {
+  bottom: 100%;
+  border-bottom-color: #434240;
+}
+.asTooltip_dream.asTooltip-element-left.asTooltip-arrow-middle .asTooltip-inner:before,
+.asTooltip_dream.asTooltip-element-right.asTooltip-arrow-middle .asTooltip-inner:before {
   top: 50%;
-  right: -4px;
-  margin-top: -10px;
+  margin-top: -6px;
 }
-.asTooltip_dream.asTooltip-e .asTooltip-arrow {
-  top: 50%;
-  left: -4px;
-  margin-top: -10px;
+.asTooltip_dream.asTooltip-element-top.asTooltip-arrow-middle .asTooltip-inner:before,
+.asTooltip_dream.asTooltip-element-bottom.asTooltip-arrow-middle .asTooltip-inner:before {
+  left: 50%;
+  margin-left: -6px;
 }
-.asTooltip_dream.asTooltip-ne .asTooltip-arrow {
-  bottom: -4px;
-  left: 9px;
+.asTooltip_dream.asTooltip-arrow-left .asTooltip-inner:before {
+  left: 6px;
 }
-.asTooltip_dream.asTooltip-nw .asTooltip-arrow {
-  bottom: -4px;
-  right: 9px;
+.asTooltip_dream.asTooltip-arrow-right .asTooltip-inner:before {
+  right: 6px;
 }
-.asTooltip_dream.asTooltip-se .asTooltip-arrow {
-  left: 9px;
-  top: -4px;
+.asTooltip_dream.asTooltip-arrow-top .asTooltip-inner:before {
+  top: 6px;
 }
-.asTooltip_dream.asTooltip-sw .asTooltip-arrow {
-  right: 9px;
-  top: -4px;
+.asTooltip_dream.asTooltip-arrow-bottom .asTooltip-inner:before {
+  bottom: 6px;
 }
