--- a/css/tooltip.sea.css
+++ b/css/tooltip.sea.css
@@ -1,62 +1,77 @@
-.asTooltip_sea {
-  opacity: 0.6;
-  max-width: 250px;
-}
-.asTooltip_sea .asTooltip-content {
-  background-color: #4C4C4C;
-  padding: 10px;
-  border-radius: 5px;
+.asTooltip_sea .asTooltip-inner {
+  padding: 0.2em 0.6em;
+  font-size: 1.1em;
+  line-height: 1.5em;
   color: #fff;
+  background-color: #4C4C4C;
+  opacity: 0.6;
+  border-radius: 3px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
-.asTooltip_sea .asTooltip-arrow {
-  position: absolute;
-  width: 0px;
-  height: 0px;
-}
-.asTooltip_sea .asTooltip-loading {
+.asTooltip_sea .asTooltip-inner:before {
+  content: '';
   display: block;
-  width: 16px;
-  height: 16px;
-  background: url("../img/tooltip-loading.gif") no-repeat scroll 0 0 transparent;
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-width: 6px;
+  border-style: solid;
+  border-color: transparent;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
-.asTooltip_sea.asTooltip-n {
-  padding-bottom: 10px;
+.asTooltip_sea .asTooltip-loading:before,
+.asTooltip_sea .asTooltip-loading:after {
+  background-color: white;
 }
-.asTooltip_sea.asTooltip-n .asTooltip-arrow {
-  border-top: 10px solid #4C4C4C;
+.asTooltip_sea.asTooltip-element-top .asTooltip-inner {
+  margin-bottom: 6px;
 }
-.asTooltip_sea.asTooltip-s {
-  padding-top: 10px;
+.asTooltip_sea.asTooltip-element-top .asTooltip-inner:before {
+  top: 100%;
+  border-top-color: #434240;
 }
-.asTooltip_sea.asTooltip-s .asTooltip-arrow {
-  border-bottom: 10px solid #000;
+.asTooltip_sea.asTooltip-element-left .asTooltip-inner {
+  margin-right: 6px;
 }
-.asTooltip_sea.asTooltip-w {
-  padding-left: 10px;
+.asTooltip_sea.asTooltip-element-left .asTooltip-inner:before {
+  left: 100%;
+  border-left-color: #434240;
 }
-.asTooltip_sea.asTooltip-w .asTooltip-arrow {
-  border-right: 10px solid #000;
+.asTooltip_sea.asTooltip-element-right .asTooltip-inner {
+  margin-left: 6px;
 }
-.asTooltip_sea.asTooltip-e {
-  padding-right: 10px;
+.asTooltip_sea.asTooltip-element-right .asTooltip-inner:before {
+  right: 100%;
+  border-right-color: #434240;
 }
-.asTooltip_sea.asTooltip-e .asTooltip-arrow {
-  border-left: 10px solid #000;
+.asTooltip_sea.asTooltip-element-bottom .asTooltip-inner {
+  margin-top: 6px;
 }
-.asTooltip_sea.asTooltip-ne {
-  padding-bottom: 10px;
+.asTooltip_sea.asTooltip-element-bottom .asTooltip-inner:before {
+  bottom: 100%;
+  border-bottom-color: #434240;
 }
-.asTooltip_sea.asTooltip-nw {
-  padding-bottom: 10px;
+.asTooltip_sea.asTooltip-element-left.asTooltip-arrow-middle .asTooltip-inner:before,
+.asTooltip_sea.asTooltip-element-right.asTooltip-arrow-middle .asTooltip-inner:before {
+  top: 50%;
+  margin-top: -6px;
 }
-.asTooltip_sea.asTooltip-nw .asTooltip-arrow {
-  border-top: 10px solid #000;
-  right: 0;
-  bottom: -10px;
+.asTooltip_sea.asTooltip-element-top.asTooltip-arrow-middle .asTooltip-inner:before,
+.asTooltip_sea.asTooltip-element-bottom.asTooltip-arrow-middle .asTooltip-inner:before {
+  left: 50%;
+  margin-left: -6px;
 }
-.asTooltip_sea.asTooltip-se {
-  padding-top: 10px;
+.asTooltip_sea.asTooltip-arrow-left .asTooltip-inner:before {
+  left: 6px;
 }
-.asTooltip_sea.asTooltip-sw {
-  padding-top: 10px;
+.asTooltip_sea.asTooltip-arrow-right .asTooltip-inner:before {
+  right: 6px;
+}
+.asTooltip_sea.asTooltip-arrow-top .asTooltip-inner:before {
+  top: 6px;
+}
+.asTooltip_sea.asTooltip-arrow-bottom .asTooltip-inner:before {
+  bottom: 6px;
 }
