--- a/less/skin-dream.less
+++ b/less/skin-dream.less
@@ -1,80 +1,107 @@
 // skin dream
 //====================================================
+@asTooltip-arrow-width: 6px;
+
 .asTooltip_dream {
-	.asTooltip-arrow {
-		position: absolute;
-		display: inline-block;
-
-		width: 15px;
-		height: 15px;
-		z-index: -1;
-		background-color: #434240;
-		transform: rotate(45deg);
-	}
-
-	.asTooltip-content {
-		display: inline-block;
-		max-width: 200px;
-		padding: 6px 8px;
-		font-size: 13px;
+	.asTooltip-inner {
+		padding: 0.2em 0.6em;
+		font-size: 1.1em;
+        line-height: 1.5em;
 		color: #fff;
-		text-shadow: 1px, -1px, 1px, #777;
 		background-color: #434240;
 		border-radius: 3px;
+        box-sizing: border-box;
+        &:before {
+            content: '';
+            display: block;
+            position: absolute;
+            width: 0;
+            height: 0;
+            border-width: @asTooltip-arrow-width;
+            border-style: solid;
+            border-color: transparent;
+            box-sizing: border-box;
+        }
 	}
+    .asTooltip-loading {
+       &:before, &:after {
+            background-color: white;
+       } 
+    }
+    &.asTooltip-element-top {
+        .asTooltip-inner {
+            margin-bottom: @asTooltip-arrow-width;
+            &:before {
+                top: 100%;
+                border-top-color: #434240;
+            }
+        }
+    }
+    &.asTooltip-element-left {
+        .asTooltip-inner {
+            margin-right: @asTooltip-arrow-width;
+            &:before {
+                left: 100%;
+                border-left-color: #434240;
+            }
+        }
+    }
+    &.asTooltip-element-right {
+        .asTooltip-inner {
+            margin-left: @asTooltip-arrow-width;
+            &:before {
+                right: 100%;
+                border-right-color: #434240;
+            }
+        }
+    }
+    &.asTooltip-element-bottom {
+        .asTooltip-inner {
+            margin-top: @asTooltip-arrow-width;
+            &:before {
+                bottom: 100%;
+                border-bottom-color: #434240;
+            }
+        }
+    }
 
-    &.asTooltip-n {
-        .asTooltip-arrow {
-            left: 50%;
-            bottom: -4px;
-            margin-left: -10px;
+    &.asTooltip-element-left, &.asTooltip-element-right {
+        &.asTooltip-arrow-middle {
+           .asTooltip-inner:before {
+                top: 50%;
+                margin-top: -@asTooltip-arrow-width;
+            } 
         }
     }
-    &.asTooltip-s {
-        .asTooltip-arrow {
-            left: 50%;
-            top: -4px;
-            margin-left: -10px;
+    &.asTooltip-element-top, &.asTooltip-element-bottom {
+        &.asTooltip-arrow-middle {
+            .asTooltip-inner:before {
+                left: 50%;
+                margin-left: -@asTooltip-arrow-width;
+            }
         }
     }
-    &.asTooltip-w {
-        .asTooltip-arrow {
 
-            top: 50%;
-            right: -4px;
-            margin-top: -10px;
+    &.asTooltip-arrow-left {
+        .asTooltip-inner:before {
+            left: @asTooltip-arrow-width;
         }
     }
-    &.asTooltip-e {
-        .asTooltip-arrow {
-
-            top: 50%;
-            left: -4px;
-            margin-top: -10px;
+    
+    &.asTooltip-arrow-right {
+        .asTooltip-inner:before {
+            right: @asTooltip-arrow-width;
         }
     }
-    &.asTooltip-ne {
-        .asTooltip-arrow {
-            bottom: -4px;
-            left: 9px;
+    &.asTooltip-arrow-top {
+        .asTooltip-inner:before {
+            top: @asTooltip-arrow-width;
         }
     }
-    &.asTooltip-nw {
-        .asTooltip-arrow {
-            bottom: -4px;
-            right: 9px;
-        }
-    }
-    &.asTooltip-se {
-        .asTooltip-arrow {
-            left: 9px;
-            top: -4px;
-        }
-    }
-    &.asTooltip-sw {
-        .asTooltip-arrow {
-            right: 9px;
-            top: -4px;
+    
+    &.asTooltip-arrow-bottom {
+        .asTooltip-inner:before {
+            bottom: @asTooltip-arrow-width;
         }
     }
 }
